# TurboReg_CopCon

./: .gitignore  CMakeLists.txt  README.md  test_xpu.py
bindings/: CMakeLists.txt  setup.py
demo_cpp/: CMakeLists.txt  corr_fpfh.cpp
turboreg/: CMakeLists.txt
turboreg/include/turboreg/: model_selection.hpp  turboreg.hpp
turboreg/src/: coplanar_constraint.cpp  turboreg.cpp
turboreg_py/: README.md  __init__.py  core_turboreg.py  curvature.py  find_cliques.py  keypoint.py  local_filter.py  model_selection.py  rigid_transform.py  seed_point.py  sphere_filter.py  test_turboreg.py  turboreg.py  turboregCopCons.py  turboregPlus.py  turboreg_update.py  utils_pcr.py  visualization_debug.py  voexl_test.py
turboreg_py/demo_py/: dataset_3dmatch.py  exp_3dmatch.py  o3d_fpfh.py  utils_pcr.py
turboreg_py/demo_py/result/3DLoMatch/fcgf/: all_result.txt  error_result.txt  log.txt
turboreg_py/demo_py/result/3DLoMatch/fpfh/: all_result.txt  error_result.txt  log.txt
turboreg_py/demo_py/result/3DMatch/fcgf/: all_result.txt  error_result.txt  log.txt
turboreg_py/demo_py/result/3DMatch/fpfh/: all_result.txt  error_result.txt  log.txt
turboreg_py/demo_py/result/backup/3DMatch/fcgf/: all_result.txt  error_result.txt  log.txt
turboreg_py/demo_py/result/backup/3DMatch/fpfh/: all_result.txt  error_result.txt  log.txt
turboreg_py/keypoint/: graph_cut.py  keypoint.py  keypoint_optional_spatrl_graph.py  keypoints_optimal_transport.py  seed_point.py
turboreg_py/module/: coplanar_consist.py
turboreg_py/regor/: regor.py
turboreg_py/visualization/: visualization_keypoint.py
